# CompAssitant-FrontDesign

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html  tests.py
backend/: README.md  pyproject.toml  run.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: ctftime.py  health.py  placeholder.py  policy.py  research.py  system.py
backend/app/core/: config.py
backend/app/models/: README.md
backend/app/repositories/: README.md
backend/app/schemas/: common.py  research.py
backend/app/services/: README.md
backend/tests/: test_health.py  test_research.py
docs/: architecture.md  backend-overview.md
docs/superpowers/plans/: 2026-04-24-global-search.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/app/: App.tsx  search-data.ts
frontend/src/app/components/: DataTag.tsx  EvidenceDrawer.tsx  GlobalSearch.tsx  Layout.tsx  PageShell.tsx
frontend/src/app/features/careers/: api.ts  mockData.ts  store.ts  types.ts  utils.ts
frontend/src/app/pages/: Careers.tsx  Chat.tsx  DataHub.tsx  DocStudio.tsx  Forum.tsx  Home.tsx  IdeaLab.tsx  Opportunities.tsx  Planner.tsx  Practice.tsx  Profile.tsx  Research.tsx  Settings.tsx  Tasks.tsx  Workspace.tsx  Writing.tsx
frontend/src/lib/: api.ts
frontend/src/styles/: theme.css
scripts/: dev.ps1  dev.sh
src/: main.tsx
src/app/: App.tsx
src/app/components/: Layout.tsx
src/app/pages/: Assets.tsx  Careers.tsx  Landing.tsx  Planner.tsx  Practice.tsx  Recommender.tsx  Tasks.tsx  index.ts
(+146 files in other folders)
