[project]
name = "securehub-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for SecureHub."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.4.0",
  "pytest>=8.3.0",
  "uvicorn[standard]>=0.30.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
